# Lion

./: .gitignore  CLAUDE.md  LION.md  LION_LAYER_2.md  LION_LENSES.md  README.md  SYNTAX.md  bash.sh  config.default.toml  hello.py  install.sh  pyproject.toml  test.md  test.text
.tmp-claude-home/: .claude.json  .claude.json.backup
docs/: IMPLEMENTATIE_GAP_TAKENLIJST.md  LENSES.md  LION.md  SPLIT_SELF_HEALING.md  SYNTAX.md  cli.md  context.md  fuse_pair.md  pair-poc.md  pair.md  pair_poc.md  pair_transport_backlog.md  self-healing.md
pair_poc/: POC_DOCUMENTATIE.md  README.md  bevindingen.md  interceptors.py  mock_cli.py  poc_runner.py
pair_poc/data/: test.md
pair_poc/results/: exp0.json  exp1.json  exp2.json  exp3.json  exp4.json  exp5.json  exp6.json  exp7.json  exp8.json
poc_gemini/: README.md  acp_poc.py  acp_turn_poc.py  acp_wait_gate_poc.py
src/lion/: __init__.py  __main__.py  api.py  display.py  escalation.py  hook.py  lion.py  memory.py  notifications.py  parser.py  pipeline.py  quick_auth.py  session.py  status.py  toon.py  worktree.py
src/lion/api/: auth.py  config.py  (+5 more)
tests/: __init__.py  conftest.py  test_api.py  test_audit.py  test_autocomplete.py  test_cli_repl.py  test_cli_rich_renderer.py  test_display.py  test_escalation.py  test_functions.py  test_fuse.py  test_gate.py  test_hook.py  test_interceptors.py  test_lion.py  test_memory.py  test_notifications.py  test_onboard.py  test_pair.py  test_parser.py  test_pipeline.py  test_providers.py  test_quick_auth.py  test_self_healing.py  test_status.py  test_toon.py  test_tui.py  test_worktree.py
(+63 files in other folders)
