[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lion"
version = "0.1.0"
description = "Lion - Language for Intelligent Orchestration Networks"
readme = "LION.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Menno Sijben"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
lion = "lion.lion:main"
lioncli = "lion.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
cli = [
    "rich>=13.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
